CB-23869: Validate hdsf configuration for rolling upgrade
In this commit I've added a new validation for rolling upgrade to validate the Hdfs configurations
From now the upgrade validation folow will fail if the following configurations are not set:
- dfs.client.block.write.replace-datanode-on-failure.policy should be set to NEVER
- dfs.client.block.write.replace-datanode-on-failure.enable should be set to false